@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: canvasview.cpp,v 1.49 2003/12/11 15:40:10 keulsn Exp $
+ * $Id: canvasview.cpp,v 1.50 2003/12/17 13:49:51 squig Exp $
  *
  *****************************************************************************/
 
@@ -142,7 +142,7 @@ void CanvasView::contentsMousePressEvent(QMouseEvent *e)
             }
 
             PinView *pinItem = dynamic_cast<PinView*>(topItem);
-            if (pinItem != 0) {
+            if (pinItem != 0 && !pinItem->isConnected()) {
                 setAction(new ConnectAction(this, e, pinItem));
             }
 
